# gmail-ai-suite

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
backend/: .env.example  client_secret.example.json  client_secret.json  db_credentials.example.json  db_credentials.json
backend/api/services/: dto.py  gmail.py
cd/api/: main.py
cd_difficulty/: Dockerfile
cd_difficulty/api/: database.py  main.py  models.py
churn-prediction/: catboost.ipynb  churn-model.ipynb
churn-prediction/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
churn-prediction/catboost_info/learn/: events.out.tfevents
churn-prediction/catboost_info/test/: events.out.tfevents
frontend/: package-lock.json
frontend/src/components/ui/: card.tsx  select.tsx
frontend/src/hooks/: useEmails.ts
gmail-ai-suite/: .env.template  .gitignore
gmail-ai-suite/backend/: .env.local  .env.prod  Dockerfile  pyproject.toml
gmail-ai-suite/backend/api/: main.py
gmail-ai-suite/backend/api/routers/: emails.py
gmail-ai-suite/backend/api/services/: classifier.py
gmail-ai-suite/frontend/: package.json
gmail-ai-suite/frontend/src/: App.tsx  components.json
gmail-ai-suite/frontend/src/components/ui/: button.tsx
gmail-ai-suite/infra/: .env  adc.json  docker-compose.yml  touch docker-compose.yml
oscommand/: os10.txt  os9.txt
part2/assignment1/: cnn.ipynb  fully_connected.ipynb
part2/assignment2/: word2vec.ipynb
part3/: part3.ipynb.backup
structured_data/: part1.ipynb
